# G17_Disaster_Alert_System

./: .coverage  .dockerignore  .env_example  .gitignore  README.md  docker-compose.yml
Backend/: .env.example  Dockerfile  app.py  example.py  requirements.txt
Collaborations/Developer_B23130/: contrib.txt
Collaborations/Developer_B23197/: contrib.txt
Collaborations/Doc_Engineer_B23162/: contrib.txt
Collaborations/Integration_Engineer_B23174/: contrib.txt
Collaborations/Project_Manager_B23123/: contrib.txt
Collaborations/QA_Engineer_B23140/: contrib.txt
Collaborations/Requirements_Engineer_B23158/: contrib.txt
Collaborations/Testing_Engineer_B23354/: contrib.txt
Frontend/: Dockerfile  index.html  tailwind.config.ts  vite.config.ts  vitest.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: Alert.tsx  AlertsPanel.tsx  DashboardSidebar.tsx  GlobeBackground.tsx  NotifyAlertModal.tsx  SettingsModal.tsx  SeverityBadge.tsx
Frontend/src/contexts/: AuthContext.tsx  protected_routes.tsx
Frontend/src/data/: mockData.ts
Frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
cache/: emergency_contacts_cache.json
reports/: coverage.json  coverage.xml  das_report.tex  evaluation_report.json  junit_report.xml
src/: __init__.py
src/alerts/: __init__.py  alert_manager.py
src/api/: __init__.py  messaging.py
src/core/: __init__.py  config.py  logger.py
src/db/: __init__.py  storage.py
tests/: PROCEDURE.md  README.md  conftest.py  procedure.tex  pyproject.toml  run_all_tests.bat  test_authorization.py  test_backend.py  test_boundary_value_analysis.py  test_functional.py  test_integration.py
tests/backend/: HOW_TO.md  conftest.py  pyproject.toml  requirements.txt
tests/backend/boundary/: test_limits.py
tests/backend/functional/: test_alerts.py
tests/backend/integration/: test_flow.py
tests/backend/safety/: test_failures.py
tests/backend/stress/: test_load.py
tests/backend/tools/: evaluator.py
tests/boundary/: test_limits.py
tests/docs/latex/: das_report.tex
tests/frontend/: AuthContext.test.tsx  HOW_TO.md  utils.test.ts
tests/functional/: test_alerts.py
tests/integration/: test_flow.py
tests/reports/: TEST_EXECUTION_REPORT.md  coverage.json  coverage.xml  evaluation_report.json  junit_report.xml
tests/safety/: test_failures.py
tests/stress/: test_load.py
